--- a/atividade5/src/main/webapp/styles.css
+++ b/atividade5/src/main/webapp/styles.css
@@ -7,7 +7,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
     Author     : lucas
 */
 
-.sub {
+sup{
     position: fixed;
     bottom: 0;
     left: 0;
