clona a atividade 5, a atividade 6 funciona exatamente igual a 5

--- a/atividade6/src/main/webapp/styles.css
+++ b/atividade6/src/main/webapp/styles.css
@@ -3,7 +3,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
 */
 /* 
-    Created on : Sep 30, 2023, 9:23:51 PM
+    Created on : Oct 1, 2023, 12:14:07 AM
     Author     : lucas
 */
 
