mudanças no CSS e adição do listener

--- a/atividade7/src/main/webapp/styles/default.css
+++ b/atividade7/src/main/webapp/styles/default.css
@@ -3,9 +3,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
 */
 /* 
-    Created on : Oct 8, 2023, 1:15:25 AM
+    Created on : Oct 8, 2023, 1:51:06 PM
     Author     : lucas
 */
+
+.users-counter {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color:#333;
+    color: #fff;
+    margin: 10px;
+    padding: 10px 0;
+}
 
 sup{
     position: fixed;
