--- a/atividade7/src/main/webapp/styles/default.css
+++ b/atividade7/src/main/webapp/styles/default.css
@@ -8,14 +8,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
 */
 
 .users-counter {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 70px;
     right: 0;
-    background-color:#333;
+    background-color: #333;
     color: #fff;
-    margin: 10px;
-    padding: 10px 0;
+    text-align: center;
+    padding: 10px;
 }
+
 
 sup{
     position: fixed;
