--- a/atividade8/src/main/webapp/styles/default.css
+++ b/atividade8/src/main/webapp/styles/default.css
@@ -17,6 +17,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
     padding: 10px;
 }
 
+.light-theme {
+    background-color: #f7e8da;
+    color: #282828;
+}
+
+.dark-theme {
+    background-color: #282828;
+    color: #c7c7d3;
+}
 
 sup{
     position: fixed;
